删除数据源时为批量删除，优化性能